# onvif_realtime_ptz_proposal

./: .gitignore  CMakeLists.txt  README.md  Readme.md  go.mod  go.sum
cmd/client/: main.go
cmd/server/: main.go
cpp/: CMakeLists.txt  main.cpp
internal/latencypb/: latency.pb.go  latency_grpc.pb.go
internal/ptzpb/: latency.pb.go  latency_grpc.pb.go
proto/: latency.proto
results/: rtt_stats.csv
scripts/: plot_histogram.py  plot_rtt.py
src/: CMakeLists.txt  onvif_realtime_ptz.h
src/flatbuffers/: CMakeLists.txt  main.cpp  onvif_realtime_ptz.fbs
src/kaitai/: CMakeLists.txt  main.cpp  onvif_realtime_ptz.cpp  onvif_realtime_ptz.h  onvif_realtime_ptz.ksy
src/protobuffers/: CMakeLists.txt  onvif_realtime_ptz.proto
